--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaVuelo
 excludes=
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\Home\\OneDrive\\Escritorio\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=C:\\POO\\Netbeans\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
